--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.12.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-impl</artifactId>
+      <version>1.2.5</version>
+    </dependency>
   </dependencies>
 
   <build>
